Fixed small allignment and spacing issues on recipes page. Sidebar WIP.

--- a/src/css/MenuSidebar.css
+++ b/src/css/MenuSidebar.css
@@ -1,10 +1,10 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
-  width: 36px;
-  height: 30px;
-  left: 36px;
-  top: 36px;
+  width: 30px;
+  height: 25px;
+  left: 30px;
+  top: 30px;
 }
 
 /* Color/shape of burger icon bars */
